<resources>
    <string name="app_name">Naati CCL Englishwise</string>


    <string name="splesh"><font color='#2a3490'>NAATI </font><font color='#E42F25'>CCL </font>  </string>
    <string name="get_Started"> Get Started</string>
    <string name="Proflie_url">https://misfitamigos.com/naticcl_api/assets/uploads/user/profile_image/</string>

    <string name="title1">Online Coaching
</string>
    <string name="title1_1">Mock Test</string>

    <string name="title2">Mock Test </string>

    <string name="title2_1">from Team United</string>

    <string name="title3">Langauges</string>
    <string name="title3_1">a Tab on Meetings</string>

    <string name="Description1">With online classes offered at NAATI CCL EnglishWise, you get to choose from different types of courses, based on the level of preparation required.</string>
    <string name="Description2">Get a glimpse of the real exam-like atmosphere with the mock examination at NAATI CCL EnglishWise.</string>
    <string name="Description3">With NAATI CCL EnglishWise by your side, you can prepare yourself in various languages!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="noconnection">Kindly connect to a WIFI network or enable Mobile Data</string>
    <string name="continue_with_google">Continue with google</string>
    <string name="contact_hint">+61 XXX XX XXXX</string>
    <string name="enter_mobile_number_to_sent_6_digit_verification_code">Signup to Englishwise with your mobile number or email address to get a verification code.</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="enter_the_6_digit_otp_received_on_your_mobile_number">Enter the OTP Verification Code to verify your identity.</string>
    <string name="resent_otp">Resent OTP</string>
    <string name="profile">Profile</string>
    <string name="action_text">OK</string>
    <string name="message_enter_a_valid_Mobile_number">Enter a valid Mobile number</string>
    <string name="main_page_selected">%s page is selected</string>

    <string name="introduction">1.)2 dialogues- 300 words each.
        \n2.)45 marks for each dialogue
        \n3.)Pass- Score at least 29 in each dialogue and Overall score – 63/90.
        \n4.)1 segment- not more than 35 words.
        \n5.)You have 1 repeat per dialogue without any penalty. You should utilize it.
        \n6.)Extra repeat is penalised.
        \n7.)You should use correction- if you make a mistake while speaking.
\n8.)Correction- marks deducted, but it is better to use correction rather than answering   wrong.
        \n9.)Total marks = 90.
    </string>


    <string name="note_taking"> 1.)Use abbreviations.
        \n2.)Develop your own strategy that works for you.
        \n3.)Simultaneously listening and writing.
        \n4.)Focus on listening so that you understand the dialogue.
        \n5.)Use Visualization technique
        \n6.)Be careful with names, dates, location, address etc
\7.)Correction- marks deducted, but it is better to use correction rather than answering   wrong.
        \n8.)Total marks = 90.
    </string>
    <string name="Speaking">1.)Speak slow and clear.
        \n2.)Mirror image of meaning, not words.
        \n3.)Pronunciation- Clear.
        \n4.)Fluency- Not too slow or too fast.
        \n5.)Speak after 2-3 seconds but 3-5 seconds is also acceptable.
        \n6.)Speak after 2-3 seconds but 3-5 seconds is also acceptable.
\7.)Start speaking in Hindi in class and with friends
        \n8.)Learn Vocabulary- Shabd Kosh Dictionary.
                \n9.)Be careful with names, dates, location, address etc.

    </string>


    <string name="Marking">1.)Omission, addition, and meaning distortion.
        \n2.)Hesitations, pauses.
        \n3.)Pronunciation &amp; Fluency.
        \n4.)Extra repeat &amp; correction.
        \n5.)Lack of Interpreting skills.
        \n6.)Note taking interfering with interpreting.
\7.)Start speaking in Hindi in class and with friends
        \n8.)Learn Vocabulary- Shabd Kosh Dictionary.
                \n9.)Be careful with names, dates, location, address etc.

    </string>


    <string-array name="spinner_Langage">

        <item>English</item>
        <item>Hindi</item>

        <item>Tamil</item>
        <item>Urdu</item>
        <item>Punjabi</item>
        <item>Malayalam</item>
        <item>Telugu</item>
        <item>Nepaese</item>
        <item>Gujarati</item>
        <item>Spanish</item>

    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_1_pte_naati_ccl"><![CDATA[NO. 1 PTE & NAATI CCL]]></string>
    <string name="institute_inaustralia">Institute inAustralia</string>
    <string name="the_credentialed_community_language_test_ccl_is_an_assessment_of_you_languages_abilities_at_a_community_level">The Credentialed Community Language Test (CCL) is an assessment of your lingual abilities at a community level.</string>
    <string name="naati_languages">NAATI  LANGUAGES</string>
    <string name="useful_resources">USEFUL RESOURCES</string>
    <string name="online_coaching"><![CDATA[online coaching course & classes]]></string>
    <string name="ccl_coaching">CCL Coaching</string>
    <string name="no_course_available">No course available for Urdu Language</string>
    <string name="create_your_profile_by_filling_in_the_credentials">Create your profile by filling-in the credentials.</string>
    <string name="vocabulary">In Vocabulary section get your hands on common and topic wise vocab.</string>
    <string name="ebooks">E-book section allows you to get access to free books related to your course</string>
    <string name="video">Video section helps you with CCL Video tutorials</string>


    <style name="MenuItemParent">
        <item name="android:layout_width">match_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:background">?selectableItemBackground</item>
        <item name="android:gravity">center_vertical</item>
        <item name="android:minHeight">50dp</item>
        <item name="android:orientation">horizontal</item>
        <item name="android:paddingLeft">20dp</item>
        <item name="android:paddingRight">20dp</item>
    </style>

    <style name="MenuItemImage">

        <item name="android:layout_width">30dp</item>
        <item name="android:layout_height">30dp</item>
        <item name="android:background">@drawable/moreitemcirlce</item>
        <item name="android:scaleType">centerInside</item>
        <item name="android:tint">@color/white</item>
        <item name="android:padding">5dp</item>
    </style>

    <style name="MenuItemLabel">
        <item name="android:fontFamily">@font/opensans_bold</item>
        <item name="android:layout_width">0dp</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:layout_weight">1</item>
        <item name="android:paddingLeft">20dp</item>
        <item name="android:paddingRight">10dp</item>
        <item name="android:minHeight">15dp</item>
        <item name="android:gravity">center_vertical</item>
        <item name="android:textAppearance">?android:attr/textAppearanceMedium</item>
        <item name="android:textColor">@color/gray</item>
    </style>

    <style name="MenuItemArrow">
        <item name="android:layout_width">30dp</item>
        <item name="android:layout_height">30dp</item>
        <item name="android:rotation">180</item>
        <item name="android:padding">3dp</item>
        <item name="android:scaleType">centerInside</item>
        <item name="android:tint">@color/red</item>

    </style>

    <style name="MenuItemUnderline">
        <item name="android:layout_width">match_parent</item>
        <item name="android:layout_height">1px</item>
        <item name="android:layout_marginLeft">20dp</item>
        <item name="android:layout_marginRight">20dp</item>
        <item name="android:background">@color/text_hint</item>
    </style>

    <style name="VocabularyItemUnderline">
        <item name="android:layout_width">match_parent</item>
        <item name="android:layout_height">1px</item>
        <item name="android:layout_marginLeft">10dp</item>
        <item name="android:layout_marginRight">10dp</item>
        <item name="android:background">@color/text_hint</item>
    </style>

    <style name="MyCustomTabText" parent="TextAppearance.Design.Tab">
        <item name="android:textSize">18sp</item>
        <item name="android:textStyle">bold</item>
    </style>

    <style name="RatingBar" paparent="Theme.AppCompat.Light.Dialog.Alert">
        <item name="colorControlActivated">@color/blue_color</item>
        <item name="colorControlNormal">@color/gradient_end_color</item>
    </style>
    <!-- Dialog -->
    <style name="TextAppearance.MyApp.Title.Expanded" parent="android:TextAppearance">
        <item name="android:textColor">@android:color/white</item>
        <item name="android:textSize">20sp</item>
        <item name="android:textStyle">bold</item>
    </style>

    <style name="TextAppearance.MyApp.Title.Collapsed" parent="android:TextAppearance">
        <item name="android:textColor">@android:color/white</item>
        <item name="android:textSize">18sp</item>
    </style>

    <style name="CustomDialog" parent="android:Theme.Dialog">
        <item name="android:windowFrame">@null</item>
        <item name="android:windowBackground">@android:color/transparent</item>
        <item name="android:windowIsFloating">true</item>
        <item name="android:windowContentOverlay">@null</item>
        <item name="android:windowTitleStyle">@null</item>
        <item name="android:windowAnimationStyle">@android:style/Animation.Dialog</item>
        <item name="android:windowSoftInputMode">stateUnspecified|adjustPan</item>
        <item name="android:backgroundDimEnabled">false</item>
        <item name="android:background">@android:color/transparent</item>
    </style>

</resources>