<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Activity.SigninActivity">

    <LinearLayout
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:orientation="vertical"

        android:padding="8dp">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:layout_gravity="left"
            android:layout_margin="10dp"
            android:src="@drawable/logo2"
            tools:ignore="RtlHardcoded">

        </ImageView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="5dp"

            android:orientation="vertical"

            android:padding="10dp">


            <TextView
                android:id="@+id/d_Name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/robotomedium"
                android:padding="2dp"
                android:text="Sign up"
                android:textColor="@color/black"
                android:textSize="25dp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/d_tax_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/robotomedium"
                android:padding="2dp"
                android:text="@string/enter_mobile_number_to_sent_6_digit_verification_code"
                android:textColor="@color/gray"
                android:textSize="13dp"
                android:textStyle="normal" />

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="5">

                <ImageView
                    android:src="@drawable/australia1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:scaleType="centerCrop"
                    android:gravity="center"

                    />

                <com.rilixtech.widget.countrycodepicker.CountryCodePicker
                    android:id="@+id/country_no_code"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"

                    android:layout_weight="1"
                    android:gravity="center"
                    android:visibility="gone"
                    app:ccp_defaultNameCode="AU" />

                <EditText
                    android:background="@android:drawable/editbox_background"
                    android:id="@+id/number"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="4"
                    android:fontFamily="@font/robotomedium"
                    android:hint="@string/contact_hint"
                    android:inputType="number"
                    android:textColor="@color/black"

                    android:textColorHint="@color/black"
                    android:textSize="18dp" />


            </LinearLayout>

            <TextView
                android:id="@+id/continue_tv"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/redbackground"
                android:gravity="center"
                android:maxLines="1"
                android:padding="5dp"
                android:text="Sign up"
                android:textColor="@color/white"
                android:textSize="18dp" />


            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/robotomedium"
                android:gravity="center"
                android:text="OR"

                android:textColor="@color/gray"
                android:textSize="18dp" />

            <com.shobhitpuri.custombuttons.GoogleSignInButton
                android:id="@+id/sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:background="@drawable/googlelogincustom"
                android:text="@string/continue_with_google"
                android:textSize="28sp"
                app:isDarkTheme="true" />

        </LinearLayout>

        <ImageView

            android:layout_width="90dp"
            android:layout_height="100dp"
            android:layout_gravity="center"

            android:gravity="bottom"
            android:src="@drawable/bglogo"
            app:tint="@color/grey_light_secondary">

        </ImageView>

    </LinearLayout>

</LinearLayout>