<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Activity.OTP_Verification">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"

        android:padding="8dp">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_gravity="left"
            android:layout_margin="10dp"
            android:src="@drawable/logo2"
            tools:ignore="RtlHardcoded">

        </ImageView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="5dp"

            android:orientation="vertical"

            android:padding="10dp">


            <TextView
                android:id="@+id/d_Name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/robotomedium"
                android:text="@string/otp_verification"
                android:textColor="@color/black"
                android:textSize="25dp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/d_tax_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/robotomedium"
                android:text="@string/enter_the_6_digit_otp_received_on_your_mobile_number"
                android:textColor="@color/gray"
                android:layout_marginBottom="20dp"
                android:textSize="13dp"
                android:textStyle="normal" />





            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal">


                <com.chaos.view.PinView
                    android:id="@+id/pinview"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:itemCount="6"
                    app:itemWidth="45dp"
                    app:itemHeight="45dp"
                    android:layout_gravity="center"
                    app:lineColor="@color/red"
                    android:itemBackground="@color/grey_light_secondary"
                    style="@style/PinWidget.PinView"
                    android:inputType="number"
                    android:cursorVisible="true"
                    app:cursorColor="@color/black"
                    app:hideLineWhenFilled="true"
                    app:itemRadius="5dp"


                    />


                <!--     <com.chaos.view.PinView
                         android:id="@+id/firstPinView"
                         style="@style/PinWidget.PinView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:cursorVisible="true"
                         android:hint="Hint."
                         android:inputType="text"
                         android:itemBackground="@mipmap/ic_launcher"
                         android:padding="10dp"
                         android:textColor="@color/black"
                         android:textSize="18sp"
                         android:textStyle="bold"
                         app:cursorColor="@color/black"
                         app:cursorWidth="2dp"
                         app:hideLineWhenFilled="true"
                         app:itemCount="6"
                         app:itemHeight="48dp"
                         app:itemRadius="4dp"
                         app:itemSpacing="0dp"
                         app:itemWidth="48dp"
                         app:lineColor="@color/black"
                         app:lineWidth="2dp"
                         app:viewType="rectangle" />-->

            </LinearLayout>

            <TextView
                android:id="@+id/otpContinue"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/redbackground"
                android:gravity="center"
                android:maxLines="1"
                android:padding="5dp"
                android:text="Continue"
                android:textColor="@color/white"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/resendotp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/robotomedium"
                android:gravity="center"
                android:text="@string/resent_otp"
                android:textColor="#191847"

                android:textSize="15dp"
                android:textStyle="bold" />


        </LinearLayout>

        <ImageView

            android:layout_width="90dp"
            android:layout_height="100dp"
            android:layout_gravity="center"

            android:gravity="bottom"
            android:src="@drawable/bglogo"
            app:tint="@color/grey_light_secondary">

        </ImageView>

    </LinearLayout>

</LinearLayout>